Fix image alignment

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -119,6 +119,7 @@ a, a:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 figure.floatright, .align-right {
